--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ header p {
 
 .job-card h3 {
   margin-bottom: 0.6rem;
-  color: #2a71d0;
+  color: #4CAF50;
   font-weight: 600;
 }
 
@@ -203,6 +203,7 @@ ul li::before {
   left: 0;
   font-weight: bold;
 }
+
 
 
 
