--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ table {
 
 th {
   background: #4CAF50;
-  color: white;
+  color: black;
   text-align: left;
   padding: 0.8rem;
   font-weight: 600;
@@ -208,6 +208,7 @@ ul li::before {
   left: 0;
   font-weight: bold;
 }
+
 
 
 
